# secret-squirrel

./: .gitignore  .ssq.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: copilot-instructions.md
config/: ssq.yml
schema/: ssq.schema.json
src/: config.rs  debug.rs  main.rs  paths.rs  scan.rs  ui.rs
