[package]
edition = "2021"
name = "secret-squirrel"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
console = "0.15.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.16.0"
