[package]
edition = "2021"
name = "secret-squirrel"
version = "0.1.0"

[[bin]]
name = "ssq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
console = "0.15.10"
crossterm = "0.27"
grep-matcher = "0.1.6"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
ignore = "0.4"
indicatif = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.16.0"
