[package]
edition = "2021"
name = "secret-squirrel"
version = "0.1.0"

[[bin]]
name = "ssq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
console = "0.15.10"
ctrlc = "3.4"
grep-matcher = "0.1.6"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
ignore = "0.4"
indicatif = "0.17.7"
memmap2 = "0.7"
parking_lot = "0.12"
ratatui = { version = "0.28", features = ["crossterm"] }
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
serde_yaml = "0.9"
thiserror = "2.0.11"
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
tempfile = "3.16.0"
